--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Yumbox"
         tools:targetApi="31">
         <activity
+            android:name=".Customer.OrderFeedbackActivity"
+            android:exported="false" />
+        <activity
             android:name=".Admin.StatisticsActivity"
             android:exported="false" />
         <activity
